--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,8 @@
     </video>
     <canvas id="overlay" width="400" height="300"></canvas>
   </div>
-  <button type="button" disabled id="startbutton">wait, loading video</button>
+  <button type="button" disabled class="startbutton">wait, loading video</button>
+  <button type="button" disabled class="savebutton">wait, loading video</button>
   <script src="js/app.js"></script>
 </body>
 </html>
