--- a/www/index.html
+++ b/www/index.html
@@ -13,10 +13,16 @@
       margin: 0;
       padding: 0;
     }
-    #overlay {
+    .overlay {
       position: absolute;
-      top: 0px;
-      left: 0px;
+      top: 0;
+      left: 0;
+    }
+    .overlay,
+    .videoel,
+    .results {
+      width: 320px;
+      height: 240px;
     }
   </style>
 </head>
@@ -37,14 +43,12 @@
   <script src="js/svmfilter_fft.js"></script>
   <script src="js/mossefilter.js"></script>
   <div id="container">
-    <video id="videoel" width="400" height="300" preload="auto" loop>
-      <!--<video id="videoel" width="320" height="240" preload="auto">-->
-      <!--<source src="./media/franck.ogv" type="video/ogg"/>-->
-    </video>
-    <canvas id="overlay" width="400" height="300"></canvas>
+    <video class="videoel" autoplay width="320" height="240"></video>
+    <canvas class="overlay" width="320" height="240"></canvas>
   </div>
   <button type="button" disabled class="startbutton">wait, loading video</button>
   <button type="button" disabled class="savebutton">wait, loading video</button>
+  <canvas id="results"></canvas>
   <script src="js/app.js"></script>
 </body>
 </html>
